# ai-pipeline-core

./: .code-workspace  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .semgrepignore  .vulture_whitelist.py  API.md  CLAUDE.md  LICENSE  Makefile  NORTHSTAR.md  README.md  documentation_plan.md  documentation_review.md  documentation_todo.md  explainer.md  problem.md  pydoc-markdown.yaml  pyproject.toml  pyrightconfig.tests.json
.ai-docs/: .hash  INDEX.md  README.md  _llm_core.md  agents.md  database.md  deployment.md  document_store.md  documents.md  exceptions.md  images.md  llm.md  logger.md  logging.md  observability.md  pipeline.md  prompt_compiler.md  prompt_manager.md  providers.md  replay.md  settings.md  testing.md
.claude/: settings.json  settings.local.json
.claude/hooks/: enforce_dev_cli.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  manual-release.yml  release.yml  reusable-quality-checks.yml
.semgrep/: application_structure.yml  architecture.yml  code_hygiene.yml  docstring_rules.yml  document_patterns.yml  llm_patterns.yml  parallel_execution.yml  pydantic_frozen.yml
.subagents/: doc-review-verifier.md
.subagents/code-quality/: _group.md  bloat.md  contracts.md  pruner.md  safety.md  usability.md
.subagents/doc-verify/: _group.md  examples.md  explainer.md  practitioner.md  questioner.md  trimmer.md
.subagents/test-quality/: _group.md  broken.md  contracts.md  coverage.md  edges.md  validation.md
ai_pipeline_core/: __init__.py  _base_exceptions.py  _codec.py  _lifecycle_events.py  exceptions.py  pipeline.py  prefect.py  prompt_manager.py  providers.py  settings.py  testing.py  tracing.py
ai_pipeline_core/_llm_core/: __init__.py  _degeneration.py  _validation.py  _validators.py  client.py  model_config.py  model_options.py  model_response.py  types.py
ai_pipeline_core/agents/: __init__.py  base.py  documents.py  registry.py  runner.py
ai_pipeline_core/database/: __init__.py  _clickhouse.py  _clickhouse_updates.py  _connection.py  _ddl.py  _document_ancestry.py  _documents.py  _download.py  _factory.py  _filesystem.py  _hydrate.py  _memory.py  _protocol.py  _summary.py  _types.py
ai_pipeline_core/debug/: content.py  processor.py  summary.py  writer.py
ai_pipeline_core/deployment/: __init__.py  _cli.py  _deployment_runtime.py  _event_reconstruction.py  _event_serialization.py  _helpers.py  _prefect.py  _publishers.py  _pubsub.py  _resolve.py  _task_results.py  _types.py  base.py  contract.py  deploy.py  helpers.py  hooks.py  progress.py  remote.py
ai_pipeline_core/docs_generator/: __init__.py  __main__.py  cli.py  extractor.py  guide_builder.py  trimmer.py  validator.py
ai_pipeline_core/document_store/: __init__.py  _clickhouse.py  _dual_store.py  _factory.py  _local.py  _memory.py  _models.py  _protocol.py  _singleton.py  _summary.py  _summary_llm.py  _summary_worker.py  clickhouse.py  factory.py  local.py  memory.py  protocol.py
ai_pipeline_core/documents/: __init__.py  _context.py  _context_vars.py  _hashing.py  _mime_type.py  _types.py  attachment.py  context.py  document.py  document_list.py  flow_document.py  mime_type.py  task_document.py  temporary_document.py  types.py  utils.py
ai_pipeline_core/flow/: __init__.py  config.py  options.py
ai_pipeline_core/images/: __init__.py  _processing.py
ai_pipeline_core/llm/: __init__.py  _conversation_messages.py  _images.py  _list_wrappers.py  _substitutor.py  _tool_loop.py  _validation.py  ai_messages.py  client.py  conversation.py  model_options.py  model_response.py  model_types.py  tools.py  types.py  validation.py
ai_pipeline_core/logger/: __init__.py  logging_config.py
ai_pipeline_core/logging/: __init__.py  _buffer.py  _handler.py  logging.yml  logging_config.py  logging_mixin.py
ai_pipeline_core/observability/: __init__.py  __main__.py  _document_tracking.py  _download_docs.py  _initialization.py  _laminar_sink.py  _logging_bridge.py  _span_data.py  _summary.py  _tree_render.py  _trimming.py  cli.py  tracing.py
ai_pipeline_core/pipeline/: __init__.py  _conversation.py  _debug.py  _execution_context.py  _file_rules.py  _flow.py  _parallel.py  _span_sink.py  _span_types.py  _task.py  _task_cache.py  _task_runtime.py  _track_span.py  _type_validation.py  debug.py  decorators.py  gather.py  limits.py  options.py
ai_pipeline_core/prompt_builder/: prompt_builder.py
ai_pipeline_core/prompt_compiler/: __init__.py  __main__.py  api.py  cli.py  components.py  render.py  spec.py  types.py
ai_pipeline_core/replay/: __init__.py  __main__.py  _adapters.py  _capture.py  _deserialize.py  _execute.py  _experiment.py  _resolve.py  cli.py  types.py
ai_pipeline_core/simple_runner/: __init__.py  cli.py  (+1 more)
dependencies_docs/: litellm-config.yml  logging_example.py  prefect.md  prefect_deployment.md
docs/: api_template.jinja2  guide_for_ai.md  litellm-config.yml  logging_example.py  prefect_logging.md  prompt_validation.md
examples/: ai-documentation-writer.md  showcase.jinja2  showcase.py  showcase_database.py  showcase_document_store.py  showcase_prompt_compiler.py  showcase_remote_deployment.py  showcase_replay.py  showcase_stubs.py
scripts/: check_ai_docs_freshness.sh  check_claude_md_symbols.py  list_all_files.py  list_all_files.sh
tests/: __init__.py  conftest.py  test_bugs_codec.py  test_codec.py  test_global_cache.py  test_helpers.py  test_logging_mixin.py  test_pipeline_decorators.py  test_pipeline_flow_storage.py  test_pipeline_trim_documents.py  test_progress.py  test_prompt_builder.py  test_providers.py  test_retry_observability.py  test_settings.py  test_smoke.py  test_wrapper_compatibility.py
tools/dev-cli/: README.md  pyproject.toml
tools/dev-cli/dev_cli/: __main__.py  _imports.py  _infra.py  _project.py  _runner.py  _scope.py  _state.py  main.py
tools/docs-generator/: README.md  pyproject.toml
tools/docs-generator/docs_generator/: __main__.py  cli.py  extractor.py  guide_builder.py
tools/docs-generator/tests/: test_cli.py  test_extractor.py  test_guide_builder.py  test_trimmer.py  test_validator.py
(+362 files in other folders)
