[project]
name = "dev-cli"
version = "0.1.0"
description = "Development CLI for ai-pipeline-core — enforces correct test/lint/check workflows"
requires-python = ">=3.14"
dependencies = [
    "pytest-reportlog>=0.4.0",
    "xxhash>=3.5.0",
]

[project.scripts]
dev = "dev_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dev_cli"]
