[project]
name = "docs-generator"
version = "0.15.1"
description = "AI-focused documentation generator for ai-pipeline-core"
requires-python = ">=3.14"

[project.scripts]
ai-docs = "docs_generator.cli:_cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docs_generator"]
